# DiceKazino----TgBot

./: .example.env  ReadMe.md  db.db  even_uneven_data.json  main.py  pyproject.toml  settings.py
src/: create_bot.py  start_bot.py
src/database/: __init__.py  bands.py  bonuses.py  database_connection.py  game_scores.py  games.py  models.py  moves.py  player_moves.py  playing_cards.py  referrals.py  transactions.py  users.py
src/database/games/: even_uneven.py  games.py
src/database/transactions/: bets.py  deposits.py  referral_bonuses.py  winnings.py  withdraws.py
src/filters/: __init__.py  active_game_filter.py  chat_type_filter.py  cmd_args_starts_with_filter.py  game_show_cmd_filter.py  is_admin_filter.py  message_is_forward.py  user_exists_filter.py
src/handlers/: __init__.py  errors.py  registration.py
src/handlers/admin/: __init__.py  admin.py  commands.py  mailing.py  payments_validation.py  registration.py  statistics.py
src/handlers/user/: __init__.py  game_strategy.py  other.py  private.py  public.py  registration.py  user.py
src/keyboards/: __init__.py  admin.py  user.py
src/keyboards/admin/: __init__.py  admin_keyboards.py  (+1 more)
src/messages/: __init__.py  admin.py  user.py
src/middlewares/: throttle.py  throttling.py
src/misc/: __init__.py  baccarat.py  callback_factories.py  enums.py  game_commands.py  game_status.py  game_types.py  states.py
src/utils/: cards.py  draw_bands_map.py  even_uneven.py  game_images.py  game_messages_sender.py  game_validations.py  generate_card_images.py  logging.py  post_payment.py  texts.py  timer.py
(+70 files in other folders)
